# ruleshub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  turbo.json
.claude/: settings.json  settings.local.json
.claude/agents/: pack-reviewer.md  security.md
.claude/commands/: bug-fix.md  db-migration.md  new-cli-command.md  new-component.md  new-feature.md  new-page.md  new-schema.md  pr-review.md  release.md  validate.md
.github/workflows/: ci.yml  cli-npm.yml  cli-php.yml  cli-pip.yml  cli-release.yml  cli-rust.yml  deploy-prod.yml  deploy-staging.yml
apps/api/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  jest-e2e.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/admin/: admin.controller.ts  admin.guard.ts  admin.module.ts  admin.service.ts
apps/api/src/api-keys/: api-keys.controller.ts  api-keys.module.ts  api-keys.service.ts
apps/api/src/auth/: auth.constants.ts  auth.controller.ts  auth.e2e-spec.ts  auth.module.ts  auth.service.ts
apps/api/src/badges/: badges.controller.ts  badges.module.ts  badges.service.ts
apps/api/src/collections/: collections.controller.ts  collections.service.ts
apps/api/src/comments/: comments.controller.ts  comments.service.ts
apps/api/src/config/: configuration.ts
apps/api/src/health/: health.controller.ts
apps/api/src/imports/: imports.controller.ts  imports.e2e-spec.ts  imports.module.ts  imports.service.ts
apps/api/src/leaderboard/: leaderboard.controller.ts  leaderboard.service.ts
apps/api/src/organisations/: organisations.controller.ts  organisations.module.ts  organisations.service.ts
apps/api/src/stars/: stars.controller.ts  (+1 more)
apps/api/test/: app.factory.ts  db.utils.ts  env-setup.ts  global-setup.ts
apps/web/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  eslint.config.mjs  next.config.ts  package.json
apps/web/public/: install.ps1  install.sh
apps/web/src/: middleware.ts
docs/: audit.md  plan.md  security.md
docs/design_handoff_ruleshub/: README.md  components.md  prompt.md  tokens.md
docs/design_handoff_ruleshub/design-reference/: app.jsx  data.jsx  pages-docs.jsx  pages-home-browse.jsx  pages-package.jsx  pages-profile-tool-lb.jsx  ruleshub.html  styles.css  tweaks.jsx
docs/design_handoff_ruleshub/source/: components.jsx  data.jsx  pages-dashboard-publish.jsx  pages-docs.jsx  pages-home-browse.jsx  ruleshub.html  styles.css
packages-php/cli/: .gitattributes  README.md  composer.json
packages-php/cli/src/: Installer.php  Plugin.php
packages-py/cli/: .gitignore  README.md  pyproject.toml
packages-py/cli/ruleshub/: __init__.py  _launcher.py
packages-py/cli/ruleshub/_bin/: .gitkeep
packages-py/cli/tools/: build_wheels.py
packages-rs/cli/: Cargo.toml  README.md  openapi.json
packages-rs/cli/schema/: regen.mjs  ruleshub.schema.json
packages-rs/cli/src/: api.rs  commands.rs  config.rs  error.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  tool.rs
packages-rs/cli/src/commands/: install.rs  outdated.rs  publish.rs  search.rs  update.rs  validate.rs
samples/nestjs-generate-module/: command.md  ruleshub.json
samples/nestjs-pr-review-workflow/: ruleshub.json  workflow.md
samples/nestjs-rules/: CLAUDE.md  README.md  ruleshub.json
samples/nestjs-starter-pack/: README.md  ruleshub.json
scripts/: bump-cli-version.py
(+151 files in other folders)
